Fix vertical alignment of logo can button

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -35,7 +35,7 @@ div#header {
   border-width: 0 0 1px;
   a#header-logo {
     position: absolute;
-    top: 0; left: 0;
+    top: 6px; left: 0;
     padding: 0.5%;
     img {
       height: 50px;
